mat input spacing issue fixed

--- a/src/app/manage-account/rename-category/rename-category.component.css
+++ b/src/app/manage-account/rename-category/rename-category.component.css
@@ -60,6 +60,23 @@
     height: auto !important;
 }
 
+:host ::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
+    padding: 1.5em 0 1em 0;
+}
+
+:host ::ng-deep mat-label {
+    line-height: normal;
+}
+
+:host ::ng-deep .mat-form-field-appearance-outline .mat-form-field-flex {
+    margin-top: 5px;
+}
+
+/* moves placeholder text a little bit more up regarding category input */
+:host ::ng-deep .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label, .mat-form-field-appearance-outline.mat-form-field-can-float .mat-input-server:focus+.mat-form-field-label-wrapper .mat-form-field-label {
+    transform: translateY(-1.79375em) scale(0.75);
+}
+
 @media only screen and (max-width: 750px) {
     .innerContent {
         flex-direction: column;
